Update MyFlinders Custom Accent Colour.css

--- a/MyFlinders Custom Accent Colour.css
+++ b/MyFlinders Custom Accent Colour.css
@@ -122,6 +122,10 @@
 		color: /*[[hovercolour]]*/;
 	}
 
+	.left-off-canvas-menu ul.off-canvas-list li a:hover
+	{
+		color: /*[[customcolour]]*/;
+	}
 	
 	
 	
