--- a/MyFlinders Dark Mode.css
+++ b/MyFlinders Dark Mode.css
@@ -169,4 +169,16 @@
 		color: white;
 	}
 	
+	body
+	{
+		color: white;
+		background: black;
+	}
+	
+	.left-off-canvas-menu
+	{
+		color: black;
+	}
+	
+	
 }
