Update MyFlinders Dark Mode.css

--- a/MyFlinders Dark Mode.css
+++ b/MyFlinders Dark Mode.css
@@ -177,8 +177,16 @@
 	
 	.left-off-canvas-menu
 	{
-		color: black;
+		background: black;
 	}
 	
+	.tab-bar
+	{
+		background: black;
+	}
 	
+	.left-off-canvas-menu .logo-wrapper
+	{
+		background-color: black;
+	}
 }
