--- a/MyFlinders Dark Mode.css
+++ b/MyFlinders Dark Mode.css
@@ -245,4 +245,9 @@
 	{
 		background-color: black;
 	}
+	
+	.global-search [type="text"]:focus, .global-search [type="text"]:active, .global-search:hover [type="text"], .global-search:hover [type="text"]:focus
+	{
+		color: white;
+	}
 }
