Update MyFlinders Dark Mode.css

--- a/MyFlinders Dark Mode.css
+++ b/MyFlinders Dark Mode.css
@@ -255,4 +255,17 @@
 	{
 	content:url(/*[[imageurl]]*/) !important;
 	}
+	
+	#component-layout .column-left .island section
+	{
+		background-color: rgb(94, 94, 94);
+	}
+	#component-layout .column-right .component-titlebar
+	{
+		background-color: black;
+	}
+	#component-layout .column-right .island section
+	{
+		background-color: black;
+	}
 }
