Update MyFlinders Dark Mode.css

--- a/MyFlinders Dark Mode.css
+++ b/MyFlinders Dark Mode.css
@@ -268,4 +268,9 @@
 	{
 		background-color: black;
 	}
+	.grid>li
+	{
+		border-right: 0px solid #ededed;
+    	border-bottom: 0px solid #ededed;
+	}
 }
