Update MyFlinders Dark Mode.css

--- a/MyFlinders Dark Mode.css
+++ b/MyFlinders Dark Mode.css
@@ -276,7 +276,7 @@
 	
 	.logo
 	{
-	content:url(https://i.imgur.com/4y0rCQ0.png) !important;
+	content:url(https://i.imgur.com/aImv7jG.png) !important;
 	}
 	
 }
